# zinq

./: .gitignore  .gitlab-ci.yml  AGENTS.md  GEMINI.md  LICENSE  MANIFEST.in  Manifest.toml  Project.toml  README.md  TODO.md  build.zig  input.json  main.jl  makefile  mkdocs.yml  pyproject.toml  readme  readme.md  setup.py  todo.md  zig
archive/: cap_analysis_tully.json  entropy_exact_check.json  exact_tully_from_file.json  exact_tully_with_cap.json  ho_bias.json  ho_spectrum.json  jahn_teller_ci_entropy.json  jahn_teller_ci_entropy.sh  jahn_teller_exact.json  jahn_teller_exact_custom.json  jahn_teller_exact_vs_custom.json  landau_zener_check.json  qd_2d_eigenstates.json  qd_3d_from_file.json  qd_gauge_fix_compare.json  sh_coherence_compare.json  ss_vmcg_spectrum_compare.json  thermostat_ho_compare.json  tully_tp_compare.json  tully_transition_probability.json  uracil_cation_vc.json
docs/: Gemfile  _config.yml  classical_molecular_dynamics.md  configuration_interaction.md  density_functional_theory.md  dual_numbers.md  ehrenfest_dynamics.md  fewest_switches_surface_hopping.md  gems.rb  geometry_optimization.md  hartree_fock.md  index.md  landau_zener_surface_hopping.md  moller_plesset.md  population_analysis.md  runge_kutta.md  split_operator_method.md  vibrational_frequency_analysis.md
example/: embedded.zig
helper/: genpot.py
include/: libint.h
interface/: wrapbagel.sh  wraporca.sh
python/: heatmap.py  neqdet.py  plot.py  resmet.py
script/: basis.pl  basis.sh  compile_libs.sh  download_basis.sh  library.pl  library.sh  molecule.pl  molecule.sh  profile.pl  profile.sh  profile_binary.sh  qsub_zinq.sh  transpile_docs.py  transpile_docs.sh
src/: Potential.jl  Potentials.jl  QuantumDynamics.jl  Zinq.jl  abinitio_potential.zig  andersen_thermostat.zig  array_functions.zig  avoided_crossing_potential.zig  baeck_an.zig  basis_set.zig  berendsen_thermostat.zig  bias_potential.zig  cimport.zig  classical_dynamics.zig  classical_particle.zig  complete_active_space.zig  complex_absorbing_potential.zig  complex_gaussian.zig  complex_matrix.zig  complex_runge_kutta.zig  complex_vector.zig  configuration_interaction.zig  constant.zig  contracted_gaussian.zig  cphf.zig  custom_potential.zig  density_functional_theory.zig  derivative_coupling.zig  determinant.zig  device_read.zig  device_write.zig  dft_functional.zig  dft_grid.zig  dft_integrate.zig  dual.zig  ehrenfest.zig  eigenproblem_solver.zig  electronic_potential.zig  embedded_files.zig  energy_derivative.zig  (+103 more)
test/: classical_dynamics.zig  configuration_interaction.zig  hartree_fock.zig  main.zig  moller_plesset.zig  quantum_dynamics.jl  quantum_dynamics.zig  runtests.jl
tests/: test_classical_dynamics.py  test_quantum_dynamics.py
tex/: library.bib  main.tex
tool/: benchmark.zig  eigh.zig  genpot.py  (+7 more)
(+218 files in other folders)
