[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zinq"
dynamic = ["version"]
description = "A lightweight Python engine for electronic structure and quantum dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Tomáš Jíra", email = "tom.jira@gmail.com"},
]
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "matplotlib",
    "pytest",
    "sympy",
]

[project.urls]
Homepage = "https://github.com/tjira/zinq"

[project.scripts]
zinq = "zinq.__main__:main"
zinq-plot = "zinq.scripts.plot:plot"
zinq-heatmap = "zinq.scripts.heatmap:heatmap"

[tool.setuptools.dynamic]
version = {attr = "zinq.__version__"}

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["zinq"]
