[build-system]
requires = ["setuptools>=61.0", "ziglang==0.16.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zinq"
dynamic = ["version"]
description = "Lightweight Python engine for electronic structure and quantum dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Tomáš Jíra", email = "tom.jira@gmail.com"},
]
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "matplotlib",
    "pytest",
    "sympy",
]

[project.urls]
Homepage = "https://github.com/tjira/zinq"

[project.scripts]
zinq = "zinq.__main__:main"
zinq-plot = "zinq.scripts.plot:plot"
zinq-heatmap = "zinq.scripts.heatmap:heatmap"

[tool.setuptools.dynamic]
version = {attr = "zinq.__version__"}

[tool.ruff]
target-version = "py310"
line-length = 99
exclude = [
    "heatmap.py",
    "plot.py",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D212",
    "COM812",
    "ISC001",
    "T201",
    "T203",
]
per-file-ignores = {"tests/*" = ["S101", "D100", "D103", "ANN", "INP001"]}
